# DmSuite_Jax

./: .pre-commit-config.yaml  README.md  pyproject.toml
dmsuite_jax/: __init__.py  cheb.py
dmsuite_old_files/: readme.md
dmsuite_old_files/dmsuite-master/dmsuite/: cheb_bc.py
dmsuite_old_files/dmsuite-master/examples/: chebyshev.py  laguerre.py
dmsuite_old_files/dmsuite-master/tests/: test_cheb2bc.py  test_cheb4c.py  test_chebint.py  test_orrsom.py  test_polydiff.py
matlab/: ce0.m  cerfa.m  cerfb.m  cheb2bc.m  cheb4c.m  chebdif.m  chebdifft.m  chebint.m  contents.m  doc.md  fourdif.m  fourdifft.m  fourint.m  herdif.m  herroots.m  lagdif.m  lagroots.m  legroots.m  matplot.m  orrsom.m  poldif.m  polint.m  schrod.m  sgrhs.m  sincdif.m  sincdifft.m  sineg.m
